--- a/index.html
+++ b/index.html
@@ -2,144 +2,199 @@
 <html class="no-js" lang="">
 
 <head>
-  <meta charset="utf-8">
-  <title>VStasko - Розкрию в тобі ідеал!</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title>VStasko - Розкрию в тобі ідеал!</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+    <meta property="og:title" content="">
+    <meta property="og:type" content="">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
 
-  <link rel="icon" href="favicon-transparent.png">
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="favicon.png">
-  <!-- Place favicon.ico in the root directory -->
+    <link rel="icon" href="favicon-transparent.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="favicon.png">
+    <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
 
-  <meta name="theme-color" content="#ece6df">
+    <meta name="theme-color" content="#ece6df">
 </head>
 
 <body>
 <header class="gold">
-  <div class="main-wrapper">
-    <nav>
-      <ul>
-        <li><a href="/#about-me">Про мене</a></li>
-        <li><a href="/#portfolio">Портфоліо</a></li>
-        <li><a href="/prices">Ціни</a></li>
-        <li><a href="/#reviews">Відгуки</a></li>
-        <li><a href="/#contacts">Контакти</a></li>
-      </ul>
-    </nav>
-    <img src="img/logo.svg" alt="VStasko logo">
-  </div>
+    <div class="main-wrapper">
+        <nav>
+            <ul>
+                <li><a href="/#about-me">Про мене</a></li>
+                <li><a href="/#portfolio">Портфоліо</a></li>
+                <li><a href="/prices">Ціни</a></li>
+                <li><a href="/#reviews">Відгуки</a></li>
+                <li><a href="/#contacts">Контакти</a></li>
+            </ul>
+        </nav>
+        <img src="img/logo.svg" alt="VStasko logo">
+    </div>
 </header>
 <main>
-  <div class="main-wrapper">
-    <img class="main-logo" src="img/main-logo.svg" alt="VStasko - розкрию в тобі ідеал">
-    <h1>VStasko - Розкрию в тобі ідеал</h1>
-    <h3>Хочеш разом розкриємо твій ідеал? <br>
-      До цього тільки один крок</h3>
-    <button>Записатись</button>
-  </div>
-  <div class="main-picture">
-    <span class="pic-overlay"></span>
-    <img src="img/main-picture.jpg" alt="Вася Стасьо">
-  </div>
+    <div class="main-wrapper">
+        <img class="main-logo" src="img/main-logo.svg" alt="VStasko - розкрию в тобі ідеал">
+        <h1>VStasko - Розкрию в тобі ідеал</h1>
+        <h3>Хочеш разом розкриємо твій ідеал? <br>
+            До цього тільки один крок</h3>
+        <button>Записатись</button>
+    </div>
+    <div class="main-picture">
+        <span class="pic-overlay"></span>
+        <img src="img/main-picture.jpg" alt="Вася Стасьо">
+    </div>
 </main>
 <section class="gold" id="form-main">
-  <div class="main-wrapper">
-    <h2>Залиш свій номер телефона.<br>
-      Ми зателефонуємо!</h2>
-    <form>
-      <label for="name"> Прізвище, Ім’я<input type="text" name="name" id="name" placeholder="Василина Васько"></label>
-      <label for="phone">Номер телефона<input type="tel" name="phone" id="phone"
-                                              placeholder="+ (38) 066 444 22 11"></label>
-      <button>Записатись</button>
-    </form>
-  </div>
+    <div class="main-wrapper">
+        <h2>Залиш свій номер телефона.<br>
+            Ми зателефонуємо!</h2>
+        <form>
+            <label for="name"> Прізвище, Ім’я<input type="text" name="name" id="name"
+                                                    placeholder="Василина Васько"></label>
+            <label for="phone">Номер телефона<input type="tel" name="phone" id="phone"
+                                                    placeholder="+ (38) 066 444 22 11"></label>
+            <button>Записатись</button>
+        </form>
+    </div>
 </section>
 <section id="about-me">
-  <div class="header-wrapper gold-gradient">
+    <div class="header-wrapper gold-gradient">
+        <div class="main-wrapper">
+            <h2>Про мене</h2>
+        </div>
+    </div>
     <div class="main-wrapper">
-      <h2>Про мене</h2>
+        <div class="about-me">
+            <p>Мене звати Вася Стасьо. Я експерт-стиліст із жіночого волосся, блогер, модель та fashion-профі.</p>
+            <p>Мій бренд – це розкрити у Вас щось Ідеальне, визначне, гучне та в першу чергу - Ваше. Я проведу Вас
+                модними
+                стежками до сьогодення.</p>
+            <p>Я прагну до ідеалізації різних своїх життєвих проєктів. Сьогодні – це бразильські навички у фарбуванні
+                волосся.
+                Я постійно проходжу курси щодо покращення техніки у цьому. Далі плани і їх реалізація у дотичних
+                напрямках.</p>
+            <p>Це стиль та внутрішня реалізація людини. А далі хай живе ідея. Щодо запитів, то мені найбільше хочеться,
+                щоб
+                моя історія життя писалася природніми шляхами без штучних “бо треба”.</p>
+        </div>
+        <div class="call-to-action">
+            <img src="img/slogan.svg" alt="Розкрию в тобі ідеал">
+            <h3>Допоможи розкрити в тобі ідеал - Запишись</h3><span class="hl"></span>
+            <button>Записатись</button>
+        </div>
     </div>
-  </div>
-  <div class="main-wrapper">
-    <div>
-      <p>Мене звати Вася Стасьо. Я експерт-стиліст із жіночого волосся, блогер, модель та fashion-профі.</p>
-      <p>Мій бренд – це розкрити у Вас щось Ідеальне, визначне, гучне та в першу чергу - Ваше. Я проведу Вас модними
-        стежками до сьогодення.</p>
-      <p>Я прагну до ідеалізації різних своїх життєвих проєктів. Сьогодні – це бразильські навички у фарбуванні волосся.
-        Я постійно проходжу курси щодо покращення техніки у цьому. Далі плани і їх реалізація у дотичних напрямках.</p>
-      <p>Це стиль та внутрішня реалізація людини. А далі хай живе ідея. Щодо запитів, то мені найбільше хочеться, щоб
-        моя історія життя писалася природніми шляхами без штучних “бо треба”.</p>
-    </div>
-    <div class="call-to-action">
-      <h3>Допоможи розкрити в тобі ідеал - Запишись</h3><span class="hl"></span>
-      <button>Записатись</button>
-    </div>
-  </div>
 </section>
 <section id="portfolio">
-  <div class="header-wrapper gold-gradient">
+    <div class="header-wrapper gold-gradient">
+        <div class="main-wrapper">
+            <h2>Портфоліо</h2>
+        </div>
+    </div>
     <div class="main-wrapper">
-      <h2>Портфоліо</h2>
+        <div class="portfolio-wrapper">
+            <div class="model">
+                <span class="hl"></span>
+                <img src="img/models/01.jpg" alt="">
+                <h3>Бразильська техніка</h3>
+            </div>
+            <div class="model">
+                <span class="hl"></span>
+                <img src="img/models/03.jpg" alt="">
+                <h3>Бразильська техніка</h3>
+            </div>
+            <div class="model">
+                <span class="hl"></span>
+                <img src="img/models/04.jpg" alt="">
+                <h3>Бразильська техніка</h3>
+            </div>
+            <div class="model">
+                <span class="hl"></span>
+                <img src="img/models/05.jpg" alt="">
+                <h3>Бразильська техніка</h3>
+            </div>
+            <div class="model">
+                <span class="hl"></span>
+                <img src="img/models/06.jpg" alt="">
+                <h3>Бразильська техніка</h3>
+            </div>
+            <div class="model">
+                <span class="hl"></span>
+                <img src="img/models/02.jpg" alt="">
+                <h3>Бразильська техніка</h3>
+            </div>
+        </div>
+        <div class="call-to-action">
+            <img src="img/slogan.svg" alt="Розкрию в тобі ідеал">
+            <h3>Допоможи розкрити в тобі ідеал - Запишись</h3><span class="hl"></span>
+            <button>Записатись</button>
+        </div>
     </div>
-  </div>
-  <div class="main-wrapper">
-    <div>
-      <div><img src="" alt="">
-        <h3>Бразильська техніка</h3>
-      </div>
-      <div><img src="" alt="">
-        <h3>Бразильська техніка</h3>
-      </div>
-      <div><img src="" alt="">
-        <h3>Бразильська техніка</h3>
-      </div>
-      <div><img src="" alt="">
-        <h3>Бразильська техніка</h3>
-      </div>
-      <div><img src="" alt="">
-        <h3>Бразильська техніка</h3>
-      </div>
-      <div><img src="" alt="">
-        <h3>Бразильська техніка</h3>
-      </div>
-    </div>
-  </div>
 </section>
 <section id="reviews">
-  <div class="header-wrapper gold-gradient">
+    <div class="header-wrapper gold-gradient">
+        <div class="main-wrapper">
+            <h2>Відгуки</h2>
+        </div>
+    </div>
     <div class="main-wrapper">
-      <h2>Відгуки</h2>
-    </div>
-  </div>
-  <div class="main-wrapper">
-    <div>
-      <div>
-        <div>
-          <span>kika_2023_</span>
-          <span>10 тиж.</span>
+        <div class="reviews-wrapper">
+            <div class="review">
+                <div class="review-user">
+                    <span class="username">kika_2023_</span>
+                    <span>10 тиж.</span>
+                </div>
+                <div class="review-comment">
+                    <span><u>@vstaskoo</u> очевидно,волшебник!😍</span>
+                </div>
+            </div>
+            <div class="review">
+                <div class="review-user">
+                    <span class="username">kika_2023_</span>
+                    <span>27 тиж.</span>
+                </div>
+                <div class="review-comment">
+                    <span>Уже когда-то я пыталась покраситься и успехом это не увенчалось😅Как только я покрасилась,то
+                        сразу решила что мне ничего не нравится и я буду отращивать свой цвет🙃Но я всегда чувствовала,что мне
+                        скучно со своим цветом и долго не могла понять что делать с волосами и стоит ли вообще.Когда я увидела
+                        работы @vstaskoo ,то сразу поняла что это оно и мне это надо,так вот это тот случай,когда меня в конце
+                        повернули к зеркалу и у меня просто перехватило дыхание,потому что я не ожидала,что меня это настолько
+                        впечатлит🤤Вообщем @vstaskoo к тебе теперь хоть через всю страну❤️</span>
+                </div>
+            </div>
+            <div class="review">
+                <div class="review-user">
+                    <span class="username">yuliya.tsotsko</span>
+                    <span>28 тиж.</span>
+                </div>
+                <div class="review-comment">
+                    <span>Дякую @vstaskoo! Ідеальний стан та якість волосся після фарбування.
+                        Волосся стало набагато краще рости, це неймовірно.
+                        Ось , що значить правильний підхід</span>
+                </div>
+            </div>
         </div>
-        <div>
-          <span><u>@vstaskoo</u> очевидно,волшебник!😍</span>
-        </div>
-      </div>
     </div>
-  </div>
 </section>
-<footer id="contacts">
-  <div class="main-wrapper">
-    <h2>Зв'язатися зі мною:</h2>
-    <h3>Соц мережа:</h3>  <span>@vstaskoo</span>
-    <h3>Адреса: Такий то салон, вул. Така/46</h3>
-  </div>
+<footer id="contacts" class="gold">
+    <div class="header-wrapper gold-gradient">
+        <div class="main-wrapper">
+            <h2>Зв'язатися зі мною:</h2>
+        </div>
+    </div>
+    <div class="main-wrapper">
+        <div class="footer-wrapper">
+            <h3>Соц мережа:  <span class="username"><a href="/">@vstaskoo</a></span></h3>
+            <h3>Номер телефона: <a href="tel:+380509927317"> +380509927317</a></h3>
+            <h3>Адреса: Такий то салон, вул. Така/46</h3>
+        </div>
+    </div>
 </footer>
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/plugins.js"></script>
@@ -147,15 +202,15 @@
 
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
 <script>
-  window.ga = function () {
-    ga.q.push(arguments)
-  };
-  ga.q = [];
-  ga.l = +new Date;
-  ga('create', 'UA-XXXXX-Y', 'auto');
-  ga('set', 'anonymizeIp', true);
-  ga('set', 'transport', 'beacon');
-  ga('send', 'pageview')
+    window.ga = function () {
+        ga.q.push(arguments)
+    };
+    ga.q = [];
+    ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto');
+    ga('set', 'anonymizeIp', true);
+    ga('set', 'transport', 'beacon');
+    ga('send', 'pageview')
 </script>
 <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
